<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TargetFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="247dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/p1" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/target_labe1"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_weight="0.8"
        android:text="@string/target_label_2"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/present_labe1"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/present"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_weight="0.8"
        android:text="@string/present_label_2"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:textSize="18sp"/>


</LinearLayout>